Fixed aligning of SearchDropFilter

--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -154,10 +154,12 @@ input {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin-top: 110px;
-  left: 150px;
-  }
+  left: 80px;
+}
 
-  .pricing {
+ 
+
+  .anyPricing {
     position: absolute;
     text-align: center;
     border: none;
@@ -170,7 +172,7 @@ input {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     margin-top: 110px;
-    left: 300px;
+    left: 320px;
   }
 
   .bedroomCount{
